PROJECT(nemofonts)

CMAKE_MINIMUM_REQUIRED(VERSION 2.8 FATAL_ERROR)

cmake_policy(VERSION 2.8)

SET(nemoapps_VERSION_MAJOR 0)
SET(nemoapps_VERSION_MINOR 1)

SET(NEMO_ROOT "/opt/pkgs")
SET(FONT_DIR "${CMAKE_INSTALL_PREFIX}/share/fonts")

INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/manifest.json
    DESTINATION  ${NEMO_ROOT}/${PROJECT_NAME}/
    )

ADD_SUBDIRECTORY(Lato)


